# maildir-claws

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  pluginconfig.h.in
config/: Makefile.in
doc/: Makefile.am  Makefile.in  README.xml
src/: Makefile.am  Makefile.in  maildir.c  maildir.h  maildir_gtk.c  maildir_gtk.h  plugin.c  uiddb.c  uiddb.h
